# openapi.json
@@ -42,7 +42,7 @@
           }
         },
         "tags": [
-          "KV"
+          "Hash"
         ],
         "description": "Remove members from a hash",
         "requestBody": {
@@ -131,7 +131,7 @@
           }
         },
         "tags": [
-          "KV"
+          "Hash"
         ],
         "description": "Add members to a hash",
         "requestBody": {
@@ -461,7 +461,7 @@
           }
         },
         "tags": [
-          "KV"
+          "Sets"
         ],
         "description": "Remove members from a set",
         "requestBody": {
@@ -528,7 +528,7 @@
           }
         },
         "tags": [
-          "Set"
+          "Sets"
         ],
         "description": "Get Set elements",
         "summary": "Get all set elements in redis with an optional prefix"
@@ -558,7 +558,7 @@
           }
         },
         "tags": [
-          "KV"
+          "Sets"
         ],
         "description": "Add members for a set",
         "requestBody": {
